--- a/package.json
+++ b/package.json
@@ -11,30 +11,35 @@
   "dependencies": {
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
-    "@next/mdx": "^14.1.3",
+    "@next/mdx": "15.3.0",
     "@types/mdx": "^2.0.6",
     "@types/node": "20.11.25",
-    "@types/react": "18.2.64",
-    "@types/react-dom": "18.2.21",
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.2",
     "@vercel/kv": "^1.0.1",
     "autoprefixer": "10.4.18",
     "bright": "^0.8.4",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.1.3",
+    "eslint-config-next": "15.3.0",
     "eslint-config-prettier": "^9.0.0",
     "gray-matter": "^4.0.3",
     "jose": "^5.2.3",
-    "next": "14.1.3",
+    "jotai": "^2.12.3",
+    "next": "15.3.0",
     "next-mdx-remote": "^4.4.1",
     "octokit": "^3.1.0",
     "postcss": "8.4.35",
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.12",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-feather": "^2.0.10",
-    "recoil": "^0.7.7",
     "tailwindcss": "3.4.1",
     "typescript": "5.4.2"
-  }
+  },
+  "resolutions": {
+    "@types/react": "19.1.2",
+    "@types/react-dom": "19.1.2"
+  },
+  "packageManager": "yarn@4.9.1"
 }
